--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-grid-layout": "^1.3.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
     "sass": "^1.54.4",
     "typescript": "^4.7.4",
     "uuid": "^8.3.2",
